SpiderData/cnblogs/Clean/05628.txt
在用习惯了C,C++,Java的编程语言的人，可能会对python一开始不习惯，因为在if ，while等各种语句中，python的代码块不像C语言一样用大括号来包含，而是严格使用缩进来时代码更加简洁。python讲究的是代码块的一致性，即每一个代码块中的语句缩进都是一样的。


下面来看几个例子

1. 当出现这类情况是python也会报错

>>>   i =5
SyntaxError: unexpected indent
>>>

i = 0
 print(i)

print(i)   #报错
 ^
IndentationError: unexpected indent

2. python严格控制在一个代码块中缩进的一致，当缩进长度不一样时也会报错



python允许使用空格和单个制表符（tab键）来缩进，一般都是缩进一个制表符，即四个空格，pycharm中会自动帮用户进行缩进

